# gentrification-paris

./: .gitignore  CLAUDE.md  METHODOLOGY.md  README.md  REFERENCES.bib  main.py  pyproject.toml  requirements.txt
data/raw/: MANIFEST.md
notebooks/: 01_exploration_iris_2022.qmd  02_evolution_paris_2007_2022.qmd  03_grand_paris.qmd  04_tendance_longue_1968_2022.qmd  05_synthese_clerval.qmd
scripts/: build_processed.py  fetch_all.py  generate_maps.py  validate_data.py
src/gentrif/: __init__.py  apur_extract.py  config.py  fetch.py  harmonize.py  indicators.py  io.py  loaders.py  schemas.py
src/gentrif/viz/: __init__.py  maps.py  synthesis.py
tests/: test_harmonize.py  test_indicators.py  test_schemas.py
